[project]
name = "crypto-kg"
version = "0.1.0"
description = "密评报告文档解析、结构化抽取与知识图谱映射流水线，可独立运行并接入 CryptoAgent。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

# 文档解析所需的可选依赖。CryptoAgent 接入时可只装需要的格式。
[project.optional-dependencies]
docx = ["python-docx>=1.1.0"]
pdf = ["pdfplumber>=0.11.0", "PyMuPDF>=1.24.0"]
neo4j = ["neo4j>=5.14"]
all = [
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "neo4j>=5.14",
]
dev = [
    "pytest>=8.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
]

[project.scripts]
crypto-kg = "crypto_kg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_kg"]

# 便于在 CryptoAgent 的 uv workspace 中作为本地源引用
[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
