[project]
name = "crypto-kg"
version = "0.1.0"
description = "密评报告文档解析、结构化抽取、知识图谱映射与 Neo4j 查询 API。"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.116.0",
    "neo4j>=5.26.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0",
]

# 文档解析、Neo4j、开发测试等可选依赖
[project.optional-dependencies]
docx = [
    "python-docx>=1.1.0",
]

pdf = [
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
]

neo4j = [
    "neo4j>=5.26.0,<6.0.0",
]

api = [
    "fastapi>=0.116.0",
    "neo4j>=5.26.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0",
]

test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
]

all = [
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "fastapi>=0.116.0",
    "neo4j>=5.26.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
crypto-kg = "crypto_kg.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/crypto_kg",
    "src/crypto_kg_api",
]

# 便于在 CryptoAgent 的 uv workspace 中作为本地源引用
[tool.uv.sources]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]